--- a/manifest.yml
+++ b/manifest.yml
@@ -2,7 +2,7 @@ applications:
 - command: bundle exec rake db:migrate && rails s -p $PORT
   disk: 2048
   memory: 256
-  name: social-butterfly-fixed
+  name: social-butterfly-ng
   path: .
   services:
     free.postgresql-59ead:
@@ -13,6 +13,7 @@ applications:
   stackato:
     ignores:
     - public/system
+    - sampleimage
     requirements:
       ubuntu:
       - libmagickwand-dev imagemagick
